# bevy-goai

./: .gitignore  Cargo.toml  GLOSSARY.md  README.md
assets/: simpleagent.json
crates/actionset_loader/: Cargo.toml
crates/actionset_loader/src/: lib.rs  loader.rs
crates/actionset_loader/test_assets/: simpleagent.json  simpleagent.ron  simpleagent.yaml
crates/bevy_plugin/: Cargo.toml
crates/bevy_plugin/src/: lib.rs  plugin.rs
crates/core/: Cargo.toml
crates/core/src/: action_runtime.rs  action_state.rs  actions.rs  actionset.rs  ai.rs  brain.rs  considerations.rs  context_fetchers.rs  curves.rs  decision_loop.rs  entity_identifier.rs  errors.rs  events.rs  identifiers.rs  lib.rs  lods.rs  main.rs  memories.rs  pawn.rs  senses.rs  smart_object.rs  thread_safe_wrapper.rs  types.rs  utility_concepts.rs
crates/cortex_api/: Cargo.toml
crates/cortex_api/src/: api.rs  lib.rs  main.rs
crates/test_plugin/: Cargo.toml
crates/test_plugin/src/: helpers.rs  lib.rs  plugin.rs
examples/e2e/: e2e.rs
src/: action_runtime.rs  actions.rs  actionset.rs  ai.rs  arg_values.rs  brain.rs  decision_loop.rs  events.rs  lib.rs  main.rs  memories.rs  smart_object.rs  type_registry.rs  types.rs  utility_concepts.rs
