[package]
name = "cortex"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "crates/*",
]

[dependencies]
cortex-core = {version = "0.1.0", path = "crates/core"}
cortex-bevy-plugin = {version = "0.1.0", path = "crates/bevy_plugin", optional = true}
cortex-actionset-loader = {version = "0.1.0", path = "crates/actionset_loader", optional = true}
cortex-test-plugin = {version = "0.1.0", path = "crates/test_plugin", optional = true}
cortex-api = {version = "0.1.0", path = "crates/cortex_api", optional = true}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["debug"]}
cortex-core = {path = "crates/core", features = ["nostd_support"] }
cortex-bevy-plugin = {path = "crates/bevy_plugin", optional = false}
cortex-test-plugin = {path = "crates/test_plugin", optional = false}

[features]
default = ["logging", "std"]

bevy_dynamic_linking = ["bevy/dynamic_linking"]

std = [
  "cortex-core/std",
  "cortex-actionset-loader?/std"
]

# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
  "cortex-core/actionset_loader", 
  "cortex-actionset-loader",
]

# Everything needed for an 'AI Server' setup of Cortex (i.e. using Cortex as a separate ECS world)
ai_server = [
  
]

# Provides a plugin that sets up most of the basic integration for a 'Bevy-native' setup.
bevy_plugin = [
  "cortex-bevy-plugin"
]

# Everything needed for a 'Bevy-native' setup (i.e. running Cortex as a Plugin in a Bevy app)
bevy_native = [
  "bevy_plugin"
]

logging = [
  "bevy/bevy_log", 
  "cortex-core/logging",
  "cortex-actionset-loader?/logging"
]

# Everything needed to run tests.
testing = [
  "cortex-test-plugin",
  "cortex-bevy-plugin",
]

nostd_support = [
    "cortex-core/nostd_support",
    "cortex-actionset-loader?/nostd_support",
]

json_support = [
    "cortex-actionset-loader?/json_support"
]

yaml_support = [
    "cortex-actionset-loader?/yaml_support"
]

toml_support = [
    "cortex-actionset-loader?/toml_support"
]

cbor_support = [
    "cortex-actionset-loader?/cbor_support"
]

msgpack_support = [
    "cortex-actionset-loader?/msgpack_support"
]

ron_support = [
    "cortex-actionset-loader?/ron_support"
]

postcard_support = [
    "cortex-actionset-loader?/postcard_support"
]

all = [
  "actionset_loader",
  "ai_server",
  "bevy_plugin",
  "bevy_native",
  "testing",
  "json_support",
  "yaml_support",
  "toml_support",
  "cbor_support",
  "msgpack_support",
  "ron_support",
  "postcard_support",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "e2e"
path = "examples/e2e/e2e.rs"
