[package]
name = "cortex-ai"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = [
  "crates/*",
]

[dependencies]
cortex-ai-core = {version = "0.1.0", path = "crates/core"}
cortex-ai-bevy-plugin = {version = "0.1.0", path = "crates/bevy_plugin", optional = true}
cortex-ai-actionset-loader = {version = "0.1.0", path = "crates/actionset_loader", optional = true}
cortex-ai-test-plugin = {version = "0.1.0", path = "crates/test_plugin", optional = true}
cortex-ai-api = {version = "0.1.0", path = "crates/cortex_api", optional = true}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["debug"]}
cortex-ai-core = {path = "crates/core", features = ["nostd_support"] }
cortex-ai-bevy-plugin = {path = "crates/bevy_plugin", optional = false}
cortex-ai-test-plugin = {path = "crates/test_plugin", optional = false}

[features]
default = ["logging", "std"]

bevy_dynamic_linking = ["bevy/dynamic_linking"]

std = [
  "cortex-ai-core/std",
  "cortex-ai-actionset-loader?/std"
]

# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
  "cortex-ai-core/actionset_loader", 
  "cortex-ai-actionset-loader",
]

# Everything needed for an 'AI Server' setup of Cortex (i.e. using Cortex as a separate ECS world)
ai_server = [
  
]

# Provides a plugin that sets up most of the basic integration for a 'Bevy-native' setup.
bevy_plugin = [
  "cortex-ai-bevy-plugin"
]

# Everything needed for a 'Bevy-native' setup (i.e. running Cortex as a Plugin in a Bevy app)
bevy_native = [
  "bevy_plugin"
]

logging = [
  "bevy/bevy_log", 
  "cortex-ai-core/logging",
  "cortex-ai-actionset-loader?/logging"
]

# Everything needed to run tests.
testing = [
  "cortex-ai-test-plugin",
  "cortex-ai-bevy-plugin",
]

nostd_support = [
    "cortex-ai-core/nostd_support",
    "cortex-ai-actionset-loader?/nostd_support",
]

json_support = [
    "cortex-ai-actionset-loader?/json_support"
]

yaml_support = [
    "cortex-ai-actionset-loader?/yaml_support"
]

toml_support = [
    "cortex-ai-actionset-loader?/toml_support"
]

cbor_support = [
    "cortex-ai-actionset-loader?/cbor_support"
]

msgpack_support = [
    "cortex-ai-actionset-loader?/msgpack_support"
]

ron_support = [
    "cortex-ai-actionset-loader?/ron_support"
]

postcard_support = [
    "cortex-ai-actionset-loader?/postcard_support"
]

all = [
  "actionset_loader",
  "ai_server",
  "bevy_plugin",
  "bevy_native",
  "testing",
  "json_support",
  "yaml_support",
  "toml_support",
  "cbor_support",
  "msgpack_support",
  "ron_support",
  "postcard_support",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "e2e"
path = "examples/e2e/e2e.rs"
