[package]
name = "cranium"
description = "A fast, modular, no_std-friendly, batteries-included library for Game AI written in Rust."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
readme = "README.md"
repository = "https://github.com/scrdest/Cranium"

[workspace]
resolver = "2"
members = [
  "crates/*",
]

[dependencies]
cranium-core = {version = ">=0.1, <=0.3", path = "crates/core"}
cranium-bevy-plugin = {version = ">=0.1, <=0.3", path = "crates/bevy_plugin", optional = true}
cranium-actionset-loader = {version = "0.3.0", path = "crates/actionset_loader", optional = true}
cranium-test-plugin = {version = "0.3.0", path = "crates/test_plugin", optional = true}
cranium-api = {version = "0.3.0", path = "crates/cortex_api", optional = true}

[dev-dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = ["debug"]}
cranium-core = {path = "crates/core", features = ["nostd_support"] }
cranium-bevy-plugin = {path = "crates/bevy_plugin", optional = false}
cranium-test-plugin = {path = "crates/test_plugin", optional = false}

[features]
default = ["logging", "std"]

bevy_dynamic_linking = ["bevy/dynamic_linking"]

std = [
  "cranium-core/std",
  "cranium-actionset-loader?/std"
]

# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
  "cranium-core/actionset_loader", 
  "cranium-actionset-loader",
]

# Everything needed for an 'AI Server' setup of Cranium (i.e. using Cranium as a separate ECS world)
ai_server = [
  
]

# Provides a plugin that sets up most of the basic integration for a 'Bevy-native' setup.
bevy_plugin = [
  "cranium-bevy-plugin"
]

# Everything needed for a 'Bevy-native' setup (i.e. running Cranium as a Plugin in a Bevy app)
bevy_native = [
  "bevy_plugin"
]

logging = [
  "bevy/bevy_log", 
  "cranium-core/logging",
  "cranium-actionset-loader?/logging"
]

# Everything needed to run tests.
testing = [
  "cranium-test-plugin",
  "cranium-bevy-plugin",
]

nostd_support = [
    "cranium-core/nostd_support",
    "cranium-actionset-loader?/nostd_support",
]

json_support = [
    "cranium-actionset-loader?/json_support"
]

yaml_support = [
    "cranium-actionset-loader?/yaml_support"
]

toml_support = [
    "cranium-actionset-loader?/toml_support"
]

cbor_support = [
    "cranium-actionset-loader?/cbor_support"
]

msgpack_support = [
    "cranium-actionset-loader?/msgpack_support"
]

ron_support = [
    "cranium-actionset-loader?/ron_support"
]

postcard_support = [
    "cranium-actionset-loader?/postcard_support"
]

all = [
  "actionset_loader",
  "ai_server",
  "bevy_plugin",
  "bevy_native",
  "testing",
  "json_support",
  "yaml_support",
  "toml_support",
  "cbor_support",
  "msgpack_support",
  "ron_support",
  "postcard_support",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[[example]]
name = "e2e"
path = "examples/e2e/e2e.rs"
