[package]
name = "cortex-actionset-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["file_watcher", "embedded_watcher"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.141", optional = true}
serde-saphyr = { version = "0.0.14", optional = true}
toml = { version = "0.9.8", optional = true, features = ["parse", "serde"]}
ciborium = { version = "0.2.2", optional = true, features = ["std"]}
rmp-serde = { version = "1.3.1", optional = true}
ron = { version = "0.12.0", optional = true}
postcard = { version = "1.1.3", optional = true}
cortex-core = {version = "0.1.0", path = "../core", features = ["actionset_loader"]}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["dynamic_linking", "file_watcher", "embedded_watcher"] }
serde_json = { version = "1.0.141", optional = false}
serde-saphyr = { version = "0.0.14", optional = false}
ron = { version = "0.12.0", optional = false}


[features]
default = []

logging = [
    "bevy/bevy_log",
    "cortex-core/logging",
]

json_support = [
    "serde_json"
]

yaml_support = [
    "serde-saphyr"
]

toml_support = [
    "toml"
]

cbor_support = [
    "ciborium"
]

msgpack_support = [
    "rmp-serde"
]

ron_support = [
    "ron"
]

postcard_support = [
    "postcard"
]

std = [
    "cortex-core/std"
]

nostd_support = [
    "cortex-core/nostd_support"
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
