[package]
name = "cranium-bevy-plugin"
description = "A crate extending the Cranium AI library with a Plugin for quick and easy integration."
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
readme = "README.md"
repository = "https://github.com/scrdest/Cranium"

[dependencies]
bevy = { version = "0.17.3", default-features = false }
cranium-core = {version = "0.1.0", path = "../core"}
cranium-actionset-loader = {version = "0.1.0", path = "../actionset_loader", optional = true}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["dynamic_linking"] }

[features]
default = []

# Also adds the ActionSetAssetPlugin from cortex-actionset-loader for you.
include_actionset_loader = [
    "cranium-actionset-loader"
]

logging = ["bevy/bevy_log", "cranium-core/logging", "cranium-actionset-loader?/logging"]

std = ["cranium-core/std", "cranium-actionset-loader?/std"]
nostd_support = ["cranium-core/nostd_support", "cranium-actionset-loader?/nostd_support"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
