[package]
name = "cortex-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "serialize"] }
serde = { version = "1.0.219", features = ["derive"], optional = true}

[features]
# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
    "dep:serde"
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
