[package]
name = "cranium-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["bevy_animation"]}
serde = { version = "1.0.219", features = ["derive"], optional = true}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
  "dynamic_linking", 
  "bevy_animation",
  "debug", 
]}

[features]
default = ["std"]

# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
    "dep:serde", 
    "bevy/bevy_asset",
    "bevy/serialize",
]

std = ["bevy/std"]

# Uses no_std-friendly replacements for all types affected by no_std-ness. 
# Note that these may be less performant or otherwise have unique concerns!
nostd_support = [
]

logging = ["bevy/bevy_log"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
