[package]
name = "cranium-core"
description = "Core code for a fast, modular, no_std-friendly, batteries-included library for Game AI written in Rust."
version = "0.3.0"
edition = "2024"
license = "MPL-2.0"
keywords = ["ai", "gamedev", "utility-ai", "bevy"]
categories = ["game-development", "no-std"]
repository = "https://github.com/scrdest/Cranium"

[dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = ["bevy_animation"]}
serde = { version = "1.0.219", features = ["derive"], optional = true}

[dev-dependencies]
bevy = { version = ">=0.17.0, <0.19.0", default-features = false, features = [
  "dynamic_linking", 
  "bevy_animation",
  "debug", 
]}

[features]
default = ["std"]

# Provides a way to load ActionSets as Assets from the filesystem.
actionset_loader = [
    "dep:serde", 
    "bevy/bevy_asset",
    "bevy/serialize",
]

std = ["bevy/std"]

# Uses no_std-friendly replacements for all types affected by no_std-ness. 
# Note that these may be less performant or otherwise have unique concerns!
nostd_support = [
]

logging = ["bevy/bevy_log"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
