[package]
name = "cortex-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bevy = { version = "0.17.3", default-features = false}
cortex-core = {path = "../core"}
cortex-bevy-plugin = {path = "../bevy_plugin", optional = false}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
  "dynamic_linking", "debug"
]}

[features]
default = ["std", "logging", "debug"]

std = ["bevy/std"]

debug = ["bevy/debug"]

nostd_support = []

logging = ["bevy/bevy_log"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
