[package]
name = "cortex-test-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false }
cortex-core = {version = "0.1.0", path = "../core"}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["dynamic_linking"] }

[features]
default = ["logging"]

logging = ["bevy/bevy_log", "cortex-core/logging"]

std = ["cortex-core/std"]
nostd_support = ["cortex-core/nostd_support"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
