[package]
name = "cortex-ai-test-plugin"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", default-features = false }
cortex-ai-core = {version = "0.1.0", path = "../core"}

[dev-dependencies]
bevy = { version = "0.17.3", default-features = false, features = ["dynamic_linking"] }

[features]
default = ["logging"]

logging = ["bevy/bevy_log", "cortex-ai-core/logging"]

std = ["cortex-ai-core/std"]
nostd_support = ["cortex-ai-core/nostd_support"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
